<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <com.facebook.widget.LoginButton
            android:id="@+id/btnLoginWithFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            facebook:confirm_logout="false"
            facebook:fetch_user_info="true"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/login_username"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:hint="@string/login_password"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal">

            <com.rsc.idonor.views.TextViewBoldItalic
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Crimson"
                android:textSize="17sp"
                android:text="@string/login_login"/>

            <com.rsc.idonor.views.TextViewBoldItalic
                android:id="@+id/btnGoRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:padding="5dp"
                android:textColor="@color/Crimson"
                android:textSize="17sp"
                android:text="@string/login_register"/>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>