<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.rsc.idonor.views.TextViewRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/register_email"
                android:layout_marginLeft="20dp" />

            <EditText
                android:id="@+id/etRegisterEmail"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:inputType="textEmailAddress"
                android:layout_marginRight="20dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/DarkGray"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_below="@id/etRegisterEmail"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.rsc.idonor.views.TextViewRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/register_name"
                android:layout_marginLeft="20dp" />

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:inputType="text"
                android:layout_marginRight="20dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/DarkGray"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_below="@id/etFirstName"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.rsc.idonor.views.TextViewRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/register_last_name"
                android:layout_marginLeft="20dp" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:inputType="text"
                android:layout_marginRight="20dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/DarkGray"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_below="@id/etLastName"/>
    
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.rsc.idonor.views.TextViewRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/register_password"
                android:layout_marginLeft="20dp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:inputType="textPassword"
                android:layout_marginRight="20dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/DarkGray"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_below="@id/etPassword"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.rsc.idonor.views.TextViewRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/register_password_confirm"
                android:layout_marginLeft="20dp" />

            <EditText
                android:id="@+id/etPasswordConfirm"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:inputType="textPassword"
                android:layout_marginRight="20dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/DarkGray"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_below="@id/etPasswordConfirm"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.rsc.idonor.views.TextViewRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/register_dobs"
                android:layout_marginLeft="20dp" />

            <EditText
                android:id="@+id/etAge"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:inputType="date"
                android:layout_marginRight="20dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/DarkGray"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_below="@id/etAge"/>

        </RelativeLayout>

        <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="5dp">-->

            <!--<com.rsc.idonor.views.TextViewRegular-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentLeft="true"-->
                <!--android:layout_alignParentStart="true"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:text="@string/register_weight"-->
                <!--android:layout_marginLeft="20dp" />-->

            <!--<EditText-->
                <!--android:id="@+id/etWeight"-->
                <!--android:layout_width="200dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:layout_alignParentEnd="true"-->
                <!--android:inputType="number"-->
                <!--android:layout_marginRight="20dp" />-->

            <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="1dp"-->
                <!--android:background="@color/DarkGray"-->
                <!--android:layout_marginLeft="20dp"-->
                <!--android:layout_marginStart="20dp"-->
                <!--android:layout_marginEnd="20dp"-->
                <!--android:layout_marginRight="20dp"-->
                <!--android:layout_below="@id/etWeight"/>-->

        <!--</RelativeLayout>-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.rsc.idonor.views.TextViewRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/register_blood_type"
                android:layout_marginLeft="20dp" />

            <Spinner
                android:id="@+id/spinnerBloodType"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:inputType="text"
                android:layout_marginRight="20dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/DarkGray"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_below="@id/spinnerBloodType"/>

        </RelativeLayout>

        <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="5dp">-->

            <!--<com.rsc.idonor.views.TextViewRegular-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentLeft="true"-->
                <!--android:layout_alignParentStart="true"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:text="@string/register_city"-->
                <!--android:layout_marginLeft="20dp" />-->

            <!--<EditText-->
                <!--android:id="@+id/etCity"-->
                <!--android:layout_width="200dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:layout_alignParentEnd="true"-->
                <!--android:inputType="text"-->
                <!--android:layout_marginRight="20dp" />-->

            <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="1dp"-->
                <!--android:background="@color/DarkGray"-->
                <!--android:layout_marginLeft="20dp"-->
                <!--android:layout_marginStart="20dp"-->
                <!--android:layout_marginEnd="20dp"-->
                <!--android:layout_marginRight="20dp"-->
                <!--android:layout_below="@id/etCity"/>-->

        <!--</RelativeLayout>-->

        <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="5dp">-->

            <!--<com.rsc.idonor.views.TextViewRegular-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentLeft="true"-->
                <!--android:layout_alignParentStart="true"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:text="@string/register_address"-->
                <!--android:layout_marginLeft="20dp" />-->

            <!--<EditText-->
                <!--android:id="@+id/etAddress"-->
                <!--android:layout_width="200dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:layout_alignParentEnd="true"-->
                <!--android:inputType="text"-->
                <!--android:layout_marginRight="20dp" />-->

            <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="1dp"-->
                <!--android:background="@color/DarkGray"-->
                <!--android:layout_marginLeft="20dp"-->
                <!--android:layout_marginStart="20dp"-->
                <!--android:layout_marginEnd="20dp"-->
                <!--android:layout_marginRight="20dp"-->
                <!--android:layout_below="@id/etAddress"/>-->

        <!--</RelativeLayout>-->

        <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="5dp">-->

            <!--<com.rsc.idonor.views.TextViewRegular-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentLeft="true"-->
                <!--android:layout_alignParentStart="true"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:text="@string/register_phone_number"-->
                <!--android:layout_marginLeft="20dp" />-->

            <!--<EditText-->
                <!--android:id="@+id/etPhoneNumber"-->
                <!--android:layout_width="200dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:layout_alignParentEnd="true"-->
                <!--android:inputType="text"-->
                <!--android:layout_marginRight="20dp"-->
                <!--android:layout_marginEnd="20dp" />-->

            <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="1dp"-->
                <!--android:background="@color/DarkGray"-->
                <!--android:layout_marginLeft="20dp"-->
                <!--android:layout_marginStart="20dp"-->
                <!--android:layout_marginEnd="20dp"-->
                <!--android:layout_marginRight="20dp"-->
                <!--android:layout_below="@id/etPhoneNumber"/>-->

        <!--</RelativeLayout>-->

        <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="5dp">-->

            <!--<com.rsc.idonor.views.TextViewRegular-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentLeft="true"-->
                <!--android:layout_alignParentStart="true"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:text="@string/register_postal_code"-->
                <!--android:layout_marginLeft="20dp" />-->

            <!--<EditText-->
                <!--android:id="@+id/etPostalCode"-->
                <!--android:layout_width="200dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:layout_alignParentEnd="true"-->
                <!--android:inputType="number"-->
                <!--android:layout_marginRight="20dp"-->
                <!--android:layout_marginEnd="20dp" />-->

            <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="1dp"-->
                <!--android:background="@color/DarkGray"-->
                <!--android:layout_marginLeft="20dp"-->
                <!--android:layout_marginStart="20dp"-->
                <!--android:layout_marginEnd="20dp"-->
                <!--android:layout_marginRight="20dp"-->
                <!--android:layout_below="@id/etPostalCode"/>-->

        <!--</RelativeLayout>-->

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <com.rsc.idonor.views.TextViewBold
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/Crimson"
                android:textSize="16sp"
                android:text="@string/register_register"/>

        </RelativeLayout>
    </LinearLayout>

</ScrollView>